name:       MapTree
version:    0.12
synopsis:   A multilevel Map structure
description: 
category: Data
license: LGPL
author: Alejandro Castello
maintainer: a.castello.pas@gmail.com
cabal-version: >= 1.2
build-type: Simple

library
    hs-source-dirs:     src
    exposed-modules:    Data.MapTree
    build-depends:      containers, base >= 3 && < 5
